# ChangeLog for xfce-extra/xfce4-quicklauncher-plugin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher-plugin/ChangeLog,v 1.12 2012/05/22 10:52:14 ssuominen Exp $

  22 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  Remove call to intltoolize within xfconf.eclass because autotools.eclass has
  the support now.

  05 May 2012; Michał Górny <mgorny@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  alpha/ia64/sparc stable wrt #323729

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  Marked ppc stable for bug #323729.

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  Stable for HPPA (bug #323729).

  23 Jul 2010; Markus Meier <maekke@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  arm stable, bug #323729

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  ppc64 stable wrt #323729

  30 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  x86 stable, bug 323729

  29 Jun 2010; Christoph Mende <angelos@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
  Stable on amd64 wrt bug #323729

*xfce4-quicklauncher-plugin-1.9.4-r1 (18 Feb 2010)

  18 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-quicklauncher-plugin-1.9.4-r1.ebuild,
  +files/xfce4-quicklauncher-plugin-1.9.4-X-XFCE-Module-Path.patch:
  Missing X-XFCE-Module-Path entry in quicklauncher.desktop wrt #301524.

  08 Oct 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-quicklauncher-plugin-1.9.4.ebuild:
  add prefix keywords - migrate from Gentoo Prefix

*xfce4-quicklauncher-plugin-1.9.4 (25 Aug 2009)
