@@ -3,17 +3,17 @@ Hash: SHA1
 
 AUX xfce4-quicklauncher-plugin-1.9.4-X-XFCE-Module-Path.patch 330 RMD160 bf9d60854bcfbb51d3136fd56b82407d0e5c0129 SHA1 f8843108b2e2849f8dfe396d975236b57e72fe1c SHA256 a3790c192f3ed1770d68e367d92695dfac01a75c179cd30c2be28c4ae1bdb7bf
 DIST xfce4-quicklauncher-plugin-1.9.4.tar.bz2 282545 RMD160 c039d2244f08f99d4a764bd8ee38bc017a372923 SHA1 ad2b7b344ddb611cee25ee130c1f2d4765072fa1 SHA256 0b253d96e3b3fb02508e1100cbf39bfb8b40e9c75da75053e6432d83dedfffdf
-EBUILD xfce4-quicklauncher-plugin-1.9.4-r1.ebuild 1084 RMD160 8ca1d5737412689c02bfbe13a3c9a1b9fc5d9bbc SHA1 e73e12e5a1637e47a68dc81aeb6218f9f986e8fc SHA256 f80742641eb0d22f25ec338b9a8c972564636c95d52fa4ffecfb137570d1ff57
-MISC ChangeLog 2139 RMD160 ccb7bc377532047bab4a1ef3eff13ab2d4a5a067 SHA1 2a18bbb22879006809c736f8a603a6aeb864a5f0 SHA256 0cdf6b82209f68884994e1f01434399d5072fcabd33379b243664b41fcd37fc0
+EBUILD xfce4-quicklauncher-plugin-1.9.4-r1.ebuild 1359 RMD160 b0c20d8c6889c650372bbcd7b2a832b95b8d3a61 SHA1 10f5c99d3306456e8df521ccce9683222a4f4f4c SHA256 ce3ea7fe62e8af7d9cbb5cbdb51ef05bfdc4be7e44c0d1a634ce907f89a082f1
+MISC ChangeLog 2397 RMD160 d5f8ef79b679db6b5c23229b1605ac1eaa155e18 SHA1 aa87436475611339c0a74203cff86684fe545d11 SHA256 a3d3f9fae5e6adbe41fd8db1a7b0ced3de2d025619ab38006b33b7d156fb6408
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPu28lAAoJEEdUh39IaPFN040IAI+ecvXJvsES0TKnbqYMs53f
-RE8awN4YAOzBEiMd8WD4uvbgIlJ36TkeAeyyA4RgG9dtkDJjyW26wi13+tDVKWLV
-Q39UPhxpp9I4xsVcGxNKRk2N9mCBFiaZXn4jHgKalDM/1ESfzU7DXjWkGgW7TvHQ
-DL5u1wIopWHc+sbD3p8F5TGu256e5phpAMLkMd0I4PWbw+O2xP3VBM/U5oMC8OYd
-FW4/K4FCHH14DhbwORUGQ9VG+GpR5/2R7/sLc5pk28lRSDoONVOqYi54Xz/IxzYI
-ExY+qxMLB0x8dOtXZkU5CRkh9Kj+XZLBub3XBQ5Eayb20orm9429FofaBZXJ0W0=
-=i0Cy
+iQEcBAEBAgAGBQJP8dw7AAoJEEdUh39IaPFN/gcIAJ7GTRoBPN+SBCb9OGc5p0Zf
+aIV8Mvoh9el5C9R3Fqg9jXNIt7gHgCUph8/A56MyOs/3B54nq9fCPmN/+qsJoqAt
+DUu3uVvwUFaLIft15YHezZlLRbaEzAIskz9tp/BjlMFDYG2vye307NeH75r/m5zS
+qqjcXSYW3S5nOfaKYZIlmMsD+lYXhJluZOWRaTlvJOl6/uq5C5ghIpiS6wSmwu1z
+zNxtFFgp9cl9skRBrxGfzjhgIfCHhiEWe0B+Jc/gmiqnVXEmeE2EueRLEqYuIuEd
+EMG/s2dUyvWYpbIkYAIGVFnHo1gti1QXqHX/our1E/jqzv5WP8KBhmoYlcVjxHw=
+=4ZWj
 -----END PGP SIGNATURE-----
