@@ -1,10 +1,10 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher-plugin/xfce4-quicklauncher-plugin-1.9.4-r1.ebuild,v 1.12 2012/05/22 10:52:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher-plugin/xfce4-quicklauncher-plugin-1.9.4-r1.ebuild,v 1.13 2012/07/02 17:42:17 ssuominen Exp $
 
 EAPI=4
-EAUTORECONF=yes
-inherit xfconf
+#EAUTORECONF=yes
+inherit autotools xfconf
 
 DESCRIPTION="A quicklauncher plug-in for the Xfce panel"
 HOMEPAGE="http://goodies.xfce.org/projects/panel-plugins/xfce4-quicklauncher-plugin"
@@ -19,6 +19,7 @@ RDEPEND=">=xfce-base/xfce4-panel-4.8
 	>=xfce-base/libxfcegui4-4.8"
 DEPEND="${RDEPEND}
 	dev-util/intltool
+	>=dev-util/xfce4-dev-tools-4.8
 	virtual/pkgconfig"
 
 pkg_setup() {
@@ -35,6 +36,15 @@ src_prepare() {
 	sed -i \
 		-e "/^AC_INIT/s/quicklauncher_version()/quicklauncher_version/" \
 		configure.ac || die
+
+	# Prevent glib-gettextize from running wrt #423115
+	intltoolize --automake --copy --force
+	_elibtoolize --copy --force --install
+	AT_M4DIR=${EPREFIX}/usr/share/xfce4/dev-tools/m4macros
+	eaclocal
+	eautoconf
+	eautoheader
+	eautomake
 
 	xfconf_src_prepare
 }
