@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-quicklauncher-plugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher-plugin/ChangeLog,v 1.12 2012/05/22 10:52:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher-plugin/ChangeLog,v 1.13 2012/07/02 17:42:17 ssuominen Exp $
+
+  02 Jul 2012; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
+  Stop using eautoreconf to avoid glib-gettextize and call intltoolize,
+  _elibtoolize, eaclocal, eautoconf, eautoheader and eautomake by hand wrt
+  #424531
 
   22 May 2012; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-quicklauncher-plugin-1.9.4-r1.ebuild:
